fix OS injection